--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://punchh.com/careers/from-intern-to-employee-how-i-found-my-full-time-fit-2/'>Learning Data Science Outside of the Classroom - Punchh</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/cazoo/jobs/4500586002'>Job Application for Data Scientist at  Cazoo</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -125,7 +129,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698605341-data-scientist-cambridge-or-rtp-'>Biogen Data Scientist (Cambridge or RTP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698605341-data-scientist-cambridge-or-rtp-'>Biogen Data Scientist (Cambridge or RTP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge Cambridge Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -157,7 +161,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/junior-data-scientist-aiLsW0-O8r6Ae6aKjNoogA'>Junior Data Scientist #0591 job at Stratus Solutions in Springfield, VA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/junior-data-scientist-aiLsW0-O8r6Ae6aKjNoogA'>Junior Data Scientist #0591 job at Stratus Solutions in Springfield, VA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Springfield, VASpringfield, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -223,7 +227,7 @@
 <p><span class="badge badge-light">Chennai, India  Chennai, India  Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://renault.referrals.selectminds.com/jobs/st-bac%2B5-ing%C3%A9nieur-data-science-d%C3%A9tection-danomalies-dans-les-donn%C3%A9es-de-v%C3%A9hicules-%C3%A9lectrique-connect%C3%A9s-f-h-14209'>ST - BAC+5 - Ing?nieur Data science: d?tection d'anomalies dans les donn?es de v?hicules ?lectrique connect?s F/H - Carri?res chez Groupe RENAULT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://renault.referrals.selectminds.com/jobs/st-bac%2B5-ing%C3%A9nieur-data-science-d%C3%A9tection-danomalies-dans-les-donn%C3%A9es-de-v%C3%A9hicules-%C3%A9lectrique-connect%C3%A9s-f-h-14209'>ST - BAC+5 - Ing?nieur Data science: d?tection d'anomalies dans les donn?es de v?hicules ?lectrique connect?s F/H - Carri?res chez Groupe RENAULT</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -304,7 +308,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Warszawa, Polska</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
+<h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -316,7 +320,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://geico.referrals.selectminds.com/jobs/senior-data-scientist-10781'>Senior Data Scientist - GEICO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://geico.referrals.selectminds.com/jobs/senior-data-scientist-10781'>Senior Data Scientist - GEICO Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -477,12 +481,6 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p>2 days ago ... Design and implement data science research projects that utilize advanced 
 statistical methods, such as regression analysis and machine learning, to 
 address?...</p>
-<hr/>
-<h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... At SailPoint, you will work on the latest tools in Machine Learning, Big Data, 
-Cloud Computing, Graph Databases to solve challenging problems. This is a 
-paid?...</p>
 <hr/>
 
 
