--- a/data-analyst.html
+++ b/data-analyst.html
@@ -72,7 +72,7 @@
 	
 <!--Begin body here --> 
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nEpgqMw0'>Freedom Financial Network Careers - Lead Data Analyst</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/oslerdiagnostics/jobs/4502561002'>Job Application for Data Scientist, Chemical & Medical Data Analysis at Osler Diagnostics</a></h5> 
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">South San Francisco, California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698606348-co-op-statistical-genetics-genetic-epidemiology-human-target-validation-core-'>Biogen Co-op: Statistical Genetics & Genetic Epidemiology (Human Target Validation Core) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698606348-co-op-statistical-genetics-genetic-epidemiology-human-target-validation-core-'>Biogen Co-op: Statistical Genetics & Genetic Epidemiology (Human Target Validation Core) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -117,7 +117,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Mitie/743999698595710-data-privacy-analyst'>Mitie Data Privacy Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Mitie/743999698595710-data-privacy-analyst'>Mitie Data Privacy Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -125,7 +125,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/trustyou/bf231641-e271-4773-8e97-c100dc643795'>TrustYou - Data Analyst (Natural Language Processing)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/trustyou/bf231641-e271-4773-8e97-c100dc643795'>TrustYou - Data Analyst (Natural Language Processing)</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -239,7 +239,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/medidata-solutions/job/odssbfw2'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/medidata-solutions/job/odssbfw2'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -283,7 +283,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -315,7 +315,7 @@
 <p><span class="badge badge-light">Guildford  Guildford</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/KNguSTIoDu/Data-Analyst-9591170'>Data Analyst (9591170) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/KNguSTIoDu/Data-Analyst-9591170'>Data Analyst (9591170) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -363,7 +363,7 @@
 <p><span class="badge badge-light">Pleasanton, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://aberdeen.applytojob.com/apply/rw2Vxx93cC/Data-Analyst'>Data Analyst - Aberdeen - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://aberdeen.applytojob.com/apply/rw2Vxx93cC/Data-Analyst'>Data Analyst - Aberdeen - Career Page</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -387,7 +387,7 @@
 <p><span class="badge badge-light">New York, NY New York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
 	MBA Student Data &amp; Statistics - Recruiting - Harvard Business School
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -405,7 +405,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://agiledss1.recruitee.com/l/en/o/data-analyst-big-data-and-bi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://agiledss1.recruitee.com/l/en/o/data-analyst-big-data-and-bi'>
       Data Analyst (Big Data and BI) - agileDSS
     </a></h5> 
 <p><span class="badge badge-light">Montr?al, Canada</span></p>
@@ -451,7 +451,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -475,7 +475,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
